fix: switch from Resend to nodemailer with Zoho SMTP

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,6 @@
-# Get your API key from https://resend.com/api-keys
-RESEND_API_KEY=re_xxxxxxxxxxxxxxxxxxxxxxxx
+# Zoho SMTP Configuration
+# Get app password from: https://accounts.zoho.com/home#security/tfa/apppassword
+SMTP_HOST=smtp.zoho.com
+SMTP_PORT=465
+SMTP_USER=team@apnipathshala.org
+SMTP_PASS=your_zoho_app_password_here
