--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "react-hook-form": "^7.50.0",
     "@hookform/resolvers": "^3.3.4",
     "zod": "^3.22.4",
-    "nodemailer": "^6.9.0"
+    "node-fetch": "^2.7.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.0",
